// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theme Visual Regression > Theme Snapshots > should match default dark theme snapshot 1`] = `
{
  "animations": {
    "duration": {
      "fast": "150ms",
      "normal": "200ms",
      "slow": "300ms",
      "slower": "500ms",
    },
    "easing": {
      "default": "cubic-bezier(0.4, 0, 0.2, 1)",
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
      "spring": "cubic-bezier(0.34, 1.56, 0.64, 1)",
    },
  },
  "borders": {
    "radius": {
      "2xl": "1rem",
      "3xl": "1.5rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.25rem",
      "xl": "0.75rem",
    },
    "width": {
      "normal": "2px",
      "thick": "4px",
      "thin": "1px",
    },
  },
  "colors": {
    "accent": "217 33% 17%",
    "accentForeground": "210 40% 98%",
    "background": "222 47% 11%",
    "border": "217 33% 22%",
    "card": "222 47% 11%",
    "cardForeground": "210 40% 98%",
    "destructive": "0 72% 55%",
    "destructiveForeground": "0 0% 100%",
    "foreground": "210 40% 98%",
    "info": "199 89% 55%",
    "infoForeground": "199 89% 10%",
    "input": "217 33% 17%",
    "muted": "217 33% 17%",
    "mutedForeground": "215 20% 70%",
    "popover": "222 47% 11%",
    "popoverForeground": "210 40% 98%",
    "primary": "239 84% 70%",
    "primaryForeground": "222 47% 11%",
    "ring": "239 84% 70%",
    "secondary": "217 33% 17%",
    "secondaryForeground": "210 40% 98%",
    "success": "142 71% 50%",
    "successForeground": "142 71% 10%",
    "surfaceElevated": "222 47% 13%",
    "surfaceMuted": "217 33% 17%",
    "surfaceOverlay": "222 47% 9%",
    "warning": "38 92% 55%",
    "warningForeground": "38 92% 10%",
  },
  "mode": "dark",
  "name": "default-dark",
  "shadows": {
    "2xl": "0 25px 50px -12px rgb(0 0 0 / 0.6)",
    "inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.3)",
    "lg": "0 10px 15px -3px rgb(0 0 0 / 0.5), 0 4px 6px -4px rgb(0 0 0 / 0.3)",
    "md": "0 4px 6px -1px rgb(0 0 0 / 0.4), 0 2px 4px -2px rgb(0 0 0 / 0.3)",
    "none": "none",
    "sm": "0 1px 3px 0 rgb(0 0 0 / 0.4), 0 1px 2px -1px rgb(0 0 0 / 0.3)",
    "xl": "0 20px 25px -5px rgb(0 0 0 / 0.5), 0 8px 10px -6px rgb(0 0 0 / 0.4)",
    "xs": "0 1px 2px 0 rgb(0 0 0 / 0.3)",
  },
  "spacing": {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "4": "1rem",
    "5": "1.25rem",
    "6": "1.5rem",
    "8": "2rem",
  },
  "typography": {
    "fontFamily": {
      "mono": ""SF Mono", Monaco, "Cascadia Code", "Roboto Mono", Consolas, "Liberation Mono", "Courier New", monospace",
      "sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"",
    },
    "fontSize": {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": {
      "bold": 700,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
    },
    "letterSpacing": {
      "normal": "0",
      "tight": "-0.025em",
      "wide": "0.025em",
    },
    "lineHeight": {
      "normal": 1.5,
      "relaxed": 1.625,
      "tight": 1.25,
    },
  },
}
`;

exports[`Theme Visual Regression > Theme Snapshots > should match default light theme snapshot 1`] = `
{
  "animations": {
    "duration": {
      "fast": "150ms",
      "normal": "200ms",
      "slow": "300ms",
      "slower": "500ms",
    },
    "easing": {
      "default": "cubic-bezier(0.4, 0, 0.2, 1)",
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
      "spring": "cubic-bezier(0.34, 1.56, 0.64, 1)",
    },
  },
  "borders": {
    "radius": {
      "2xl": "1rem",
      "3xl": "1.5rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.25rem",
      "xl": "0.75rem",
    },
    "width": {
      "normal": "2px",
      "thick": "4px",
      "thin": "1px",
    },
  },
  "colors": {
    "accent": "240 5% 96%",
    "accentForeground": "222 47% 11%",
    "background": "0 0% 100%",
    "border": "240 6% 90%",
    "card": "0 0% 100%",
    "cardForeground": "222 47% 11%",
    "destructive": "0 84% 50%",
    "destructiveForeground": "0 0% 100%",
    "foreground": "222 47% 11%",
    "info": "199 89% 40%",
    "infoForeground": "0 0% 100%",
    "input": "240 6% 90%",
    "muted": "240 5% 96%",
    "mutedForeground": "240 4% 38%",
    "popover": "0 0% 100%",
    "popoverForeground": "222 47% 11%",
    "primary": "239 84% 56%",
    "primaryForeground": "0 0% 100%",
    "ring": "239 84% 56%",
    "secondary": "240 5% 96%",
    "secondaryForeground": "222 47% 11%",
    "success": "142 71% 35%",
    "successForeground": "0 0% 100%",
    "surfaceElevated": "0 0% 100%",
    "surfaceMuted": "240 5% 96%",
    "surfaceOverlay": "0 0% 100%",
    "warning": "38 92% 50%",
    "warningForeground": "22 92% 10%",
  },
  "mode": "light",
  "name": "default",
  "shadows": {
    "2xl": "0 25px 50px -12px rgb(0 0 0 / 0.25)",
    "inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.05)",
    "lg": "0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)",
    "md": "0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)",
    "none": "none",
    "sm": "0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)",
    "xl": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)",
    "xs": "0 1px 2px 0 rgb(0 0 0 / 0.05)",
  },
  "spacing": {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "4": "1rem",
    "5": "1.25rem",
    "6": "1.5rem",
    "8": "2rem",
  },
  "typography": {
    "fontFamily": {
      "mono": ""SF Mono", Monaco, "Cascadia Code", "Roboto Mono", Consolas, "Liberation Mono", "Courier New", monospace",
      "sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"",
    },
    "fontSize": {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": {
      "bold": 700,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
    },
    "letterSpacing": {
      "normal": "0",
      "tight": "-0.025em",
      "wide": "0.025em",
    },
    "lineHeight": {
      "normal": 1.5,
      "relaxed": 1.625,
      "tight": 1.25,
    },
  },
}
`;

exports[`Theme Visual Regression > Theme Snapshots > should match high-contrast dark theme snapshot 1`] = `
{
  "animations": {
    "duration": {
      "fast": "150ms",
      "normal": "200ms",
      "slow": "300ms",
      "slower": "500ms",
    },
    "easing": {
      "default": "cubic-bezier(0.4, 0, 0.2, 1)",
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
      "spring": "cubic-bezier(0.34, 1.56, 0.64, 1)",
    },
  },
  "borders": {
    "radius": {
      "2xl": "1rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.25rem",
      "xl": "0.75rem",
    },
    "width": {
      "normal": "2px",
      "thick": "4px",
      "thin": "2px",
    },
  },
  "colors": {
    "accent": "0 0% 15%",
    "accentForeground": "0 0% 100%",
    "background": "0 0% 0%",
    "border": "0 0% 30%",
    "card": "0 0% 5%",
    "cardForeground": "0 0% 100%",
    "destructive": "0 84% 65%",
    "destructiveForeground": "0 0% 0%",
    "foreground": "0 0% 100%",
    "info": "199 89% 60%",
    "infoForeground": "0 0% 0%",
    "input": "0 0% 20%",
    "muted": "0 0% 15%",
    "mutedForeground": "0 0% 75%",
    "popover": "0 0% 5%",
    "popoverForeground": "0 0% 100%",
    "primary": "239 84% 75%",
    "primaryForeground": "0 0% 0%",
    "ring": "239 84% 75%",
    "secondary": "0 0% 15%",
    "secondaryForeground": "0 0% 100%",
    "success": "142 71% 55%",
    "successForeground": "0 0% 0%",
    "surfaceElevated": "0 0% 8%",
    "surfaceMuted": "0 0% 10%",
    "surfaceOverlay": "0 0% 5%",
    "warning": "38 92% 60%",
    "warningForeground": "0 0% 0%",
  },
  "mode": "dark",
  "name": "high-contrast-dark",
  "shadows": {
    "2xl": "0 25px 50px -12px rgb(0 0 0 / 0.6)",
    "inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.3)",
    "lg": "0 10px 15px -3px rgb(0 0 0 / 0.5), 0 4px 6px -4px rgb(0 0 0 / 0.3)",
    "md": "0 4px 6px -1px rgb(0 0 0 / 0.4), 0 2px 4px -2px rgb(0 0 0 / 0.3)",
    "none": "none",
    "sm": "0 1px 3px 0 rgb(0 0 0 / 0.4), 0 1px 2px -1px rgb(0 0 0 / 0.3)",
    "xl": "0 20px 25px -5px rgb(0 0 0 / 0.5), 0 8px 10px -6px rgb(0 0 0 / 0.4)",
    "xs": "0 1px 2px 0 rgb(0 0 0 / 0.3)",
  },
  "spacing": {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "4": "1rem",
    "5": "1.25rem",
    "6": "1.5rem",
    "8": "2rem",
  },
  "typography": {
    "fontFamily": {
      "mono": ""SF Mono", Monaco, "Cascadia Code", "Roboto Mono", Consolas, "Liberation Mono", "Courier New", monospace",
      "sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"",
    },
    "fontSize": {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": {
      "bold": 700,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
    },
    "letterSpacing": {
      "normal": "0",
      "tight": "-0.025em",
      "wide": "0.025em",
    },
    "lineHeight": {
      "normal": 1.5,
      "relaxed": 1.625,
      "tight": 1.25,
    },
  },
}
`;

exports[`Theme Visual Regression > Theme Snapshots > should match high-contrast light theme snapshot 1`] = `
{
  "animations": {
    "duration": {
      "fast": "150ms",
      "normal": "200ms",
      "slow": "300ms",
      "slower": "500ms",
    },
    "easing": {
      "default": "cubic-bezier(0.4, 0, 0.2, 1)",
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
      "spring": "cubic-bezier(0.34, 1.56, 0.64, 1)",
    },
  },
  "borders": {
    "radius": {
      "2xl": "1rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.25rem",
      "xl": "0.75rem",
    },
    "width": {
      "normal": "2px",
      "thick": "4px",
      "thin": "2px",
    },
  },
  "colors": {
    "accent": "0 0% 95%",
    "accentForeground": "0 0% 0%",
    "background": "0 0% 100%",
    "border": "0 0% 70%",
    "card": "0 0% 100%",
    "cardForeground": "0 0% 0%",
    "destructive": "0 100% 40%",
    "destructiveForeground": "0 0% 100%",
    "foreground": "0 0% 0%",
    "info": "199 100% 35%",
    "infoForeground": "0 0% 100%",
    "input": "0 0% 85%",
    "muted": "0 0% 95%",
    "mutedForeground": "0 0% 25%",
    "popover": "0 0% 100%",
    "popoverForeground": "0 0% 0%",
    "primary": "239 100% 40%",
    "primaryForeground": "0 0% 100%",
    "ring": "239 100% 40%",
    "secondary": "0 0% 95%",
    "secondaryForeground": "0 0% 0%",
    "success": "142 100% 28%",
    "successForeground": "0 0% 100%",
    "surfaceElevated": "0 0% 100%",
    "surfaceMuted": "0 0% 95%",
    "surfaceOverlay": "0 0% 100%",
    "warning": "38 100% 38%",
    "warningForeground": "0 0% 0%",
  },
  "mode": "light",
  "name": "high-contrast",
  "shadows": {
    "2xl": "0 25px 50px -12px rgb(0 0 0 / 0.25)",
    "inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.05)",
    "lg": "0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)",
    "md": "0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)",
    "none": "none",
    "sm": "0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)",
    "xl": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)",
    "xs": "0 1px 2px 0 rgb(0 0 0 / 0.05)",
  },
  "spacing": {
    "0": "0",
    "1": "0.25rem",
    "10": "2.5rem",
    "12": "3rem",
    "16": "4rem",
    "2": "0.5rem",
    "20": "5rem",
    "24": "6rem",
    "3": "0.75rem",
    "4": "1rem",
    "5": "1.25rem",
    "6": "1.5rem",
    "8": "2rem",
  },
  "typography": {
    "fontFamily": {
      "mono": ""SF Mono", Monaco, "Cascadia Code", "Roboto Mono", Consolas, "Liberation Mono", "Courier New", monospace",
      "sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"",
    },
    "fontSize": {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": {
      "bold": 700,
      "medium": 500,
      "normal": 400,
      "semibold": 600,
    },
    "letterSpacing": {
      "normal": "0",
      "tight": "-0.025em",
      "wide": "0.025em",
    },
    "lineHeight": {
      "normal": 1.5,
      "relaxed": 1.625,
      "tight": 1.25,
    },
  },
}
`;
